# SHIT-compiler

./: .clang-format  .gitignore  404.html  CMakeLists.txt  README.md  SysY2022.g4  format.sh  index.html  mkdocs.yml  readme.md
src/: CMakeLists.txt  Compiler.cpp
src/Backend/: Assembler.cpp  CMakeLists.txt  VariableTypes.cpp
src/Backend/InstructionSets/: CMakeLists.txt
src/Backend/InstructionSets/RISC-V/: Assembler.cpp  Instructions.cpp  Memory.cpp  Modules.cpp  ReWrite.cpp  RegisterAllocator.cpp  Registers.cpp  Translator.cpp
src/Backend/Instructions/: CMakeLists.txt
src/Backend/Instructions/RISC-V/: Instruction.cpp  Instructions.cpp  Memory.cpp  Modules.cpp  Registers.cpp  Variables.cpp
src/Backend/LIR/: CMakeLists.txt  DataSection.cpp  LIR.cpp
src/Backend/MIR/: CMakeLists.txt  DataSection.cpp  Instructions.cpp  MIR.cpp  Translator.cpp
src/Frontend/: Lexer.cpp  Parser.cpp
src/Mir/: Builder.cpp  Cast.cpp  Common.cpp  Const.cpp  Eval.cpp  FunctionCloneHelper.cpp  IRBuilder.cpp  IRType.cpp  Init.cpp  Instruction.cpp  Interpreter.cpp  Structure.cpp  Symbol.cpp  Type.cpp  Value.cpp
src/Pass/: CMakeLists.txt  Manager.cpp  Utils.cpp
src/Pass/Analysis/: AliasAnalysis.cpp  BranchProbabilityAnalysis.cpp  ControlFlowGraph.cpp  ControlFlowGraph_Old.cpp  DominanceGraph.cpp  Example.cpp  FunctionAnalysis.cpp  Helloworld.cpp  IntervalAnalysis.cpp  LoopAnalysis.cpp  SCEVAnalysis.cpp
src/Pass/Transform/: AlgebraicSimplify.cpp  ConstantFolding.cpp  ConstexprFuncEval.cpp  DeadCodeEliminate.cpp  DeadFuncEliminate.cpp  DeadInstEliminate.cpp  GlobalArrayLocalize.cpp  GlobalCodeMotion.cpp  GlobalValueNumbering.cpp  GlobalVariableLocalize.cpp  LCSSA.cpp  LoopSimplyForm.cpp  Mem2Reg.cpp  SimplifyCFG.cpp  StandardizeBinary.cpp  UnusedInstEliminate.cpp
src/Pass/Transform/Array/: ConstIndexToValue.cpp  GepFolding.cpp  LoadEliminate.cpp  SROA.cpp  StoreEliminate.cpp
src/Pass/Transform/Common/: AlgebraicSimplify.cpp  ConstexprEval.cpp  StandardizeBinary.cpp
src/Pass/Transform/ControlFlow/: BranchMerging.cpp  (+11 more)
src/Utils/: Driver.cpp  Log.cpp  Print.cpp  Token.cpp
src/middle/: IrVisitor.java
src/middle/symbol/: Symbol.java
(+154 files in other folders)
